[package]
name = "accessibility-sys"
version = "0.1.0"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
homepage = "https://github.com/eiz/accessibility"
repository = "https://github.com/eiz/accessibility"
description = "Bindings for macOS Accessibility services"

[dependencies]
