[package]
name = "accessibility-sys"
version = "0.1.3"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
homepage = "https://github.com/eiz/accessibility"
repository = "https://github.com/eiz/accessibility"
description = "Bindings for macOS Accessibility services"

[dependencies]
core-foundation-sys = "0.8"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
