[package]
name = "accessibility"
version = "0.1.2"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
homepage = "https://github.com/eiz/accessibility"
repository = "https://github.com/eiz/accessibility"
description = "Bindings for macOS Accessibility services"

[dependencies]
core-foundation = "0.9"

accessibility-sys = { path = "../accessibility-sys", version = "0.1.3" }
