[package]
name = "accessibility"
version = "0.1.6"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
homepage = "https://github.com/eiz/accessibility"
repository = "https://github.com/eiz/accessibility"
description = "Bindings for macOS Accessibility services"

[dependencies]
cocoa = "0.24"
core-foundation = "0.9.3"
core-graphics-types = "0.1.1"
objc = "0.2"
thiserror = "1"

accessibility-sys = { path = "../accessibility-sys", version = "0.1.3" }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"