[package]
name = "aq"
version = "0.1.1"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
homepage = "https://github.com/eiz/accessibility"
repository = "https://github.com/eiz/accessibility"
description = "Accessibility query"

[dependencies]
core-foundation = "0.9"

accessibility = { path = "../accessibility", version = "0.1.4" }